# rust-embedded-study

./: .gitignore
blinky-stm32f4/: Cargo.toml
blinky-stm32f4/src/: main.rs
blinky-stm32l4-embassy/: Cargo.toml
blinky-stm32l4-embassy/.cargo/: config.toml
blinky-stm32l4-embassy/src/: main.rs
blinky-stm32l4x2/: Cargo.toml  openocd.cfg
blinky-stm32l4x2/src/: main.rs
button-led-stm32f4/: Cargo.toml
button-led-stm32f4/src/: main.rs
hid-lab-stm32f4/src/: main.rs
hid-lab-stm32l4x2/: Cargo.toml
hid-lab-stm32l4x2/src/: main.rs
inputs-interrupt-stm32l4-embassy/: Cargo.toml
inputs-interrupt-stm32l4-embassy/src/: main.rs
inputs-polling-stm32l4/: Cargo.toml
inputs-polling-stm32l4-embassy/: Cargo.toml
inputs-polling-stm32l4-embassy/src/: main.rs
inputs-polling-stm32l4/.cargo/: config.toml
inputs-polling-stm32l4/src/: main.rs
stm32f4-button-led/: Cargo.toml
timerpolling-blinky-stm32f4/: Cargo.toml
timerpolling-blinky-stm32f4/src/: main.rs
uart-serial-comm-stm32f4/: Cargo.toml
uart-serial-comm-stm32f4/src/: main.rs
