[package]
name = "blinky-stm32l4x2"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6"
panic-halt = "0.2.0"
cortex-m-semihosting = "0.3"
stm32l4xx-hal = { version = "0.5", features = ["rt", "stm32l4x2"] }

# this lets you use `cargo fix`!
[[bin]]
name = "blinky-stm32l4x2"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

