[package]
authors = ["muing"]
edition = "2021"
name = "button-led-stm32f4"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
embedded-hal = "0.2.7"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }

[dependencies.stm32f4xx-hal]
version = "0.13.1"
features = ["rt", "stm32f401"] # replace the model of your microcontroller here

# this lets you use `cargo fix`!
[[bin]]
name = "button-led-stm32f4"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
