[package]
name = "inputs-polling-stm32l4"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
stm32l4xx-hal = { version = "0.7.1", features = ["rt", "stm32l432"] }

# this lets you use `cargo fix`!
[[bin]]
name = "inputs-polling-stm32l4"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

